--- a/toxicdetection/pubspec.yaml
+++ b/toxicdetection/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   boxicons: ^2.1.3
   cloud_firestore: ^4.13.0
   cupertino_icons: ^1.0.2
+  custom_pop_up_menu: ^1.2.4
   firebase_auth: ^4.13.0
   firebase_core: ^2.22.0
   firebase_storage: ^11.5.1
